--- a/CascLib/CascLib.csproj
+++ b/CascLib/CascLib.csproj
@@ -10,6 +10,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>TOM_RUS</Authors>
     <Version>1.0.0</Version>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
   <ItemGroup>
